--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -6,9 +6,7 @@ on:
       GH_PAT:
         required: true
 
-permissions:
-  contents: read
-  actions: write
+permissions: write-all
 
 jobs:
   sync:
